--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <div class="row navbar">
+        <div class="row navbar " id="top">
             <div class="large-12 columns">
                 <div id="header" class="header">
                     <div id="nav">
@@ -37,11 +37,11 @@
         <div class="row fixed_bg bg_img_1">
             <div class="large-12 columns">
 
-                <!--                <div class="overlay">-->
-                <h1 class="content_paper_nme">Hi, I'm <br>
+                <div class="overlay">
+                    <h1 class="content_paper_nme">Hi, I'm <br>
                 Ciku Mwangi.<br> <span><hr id= "thread1">
                 A Graphic &amp; Web Designer 		<hr id="thread3" class="right"></span></h1>
-                <!--                </div>-->
+                </div>
                 <div class="arrow bounce">
 
                 </div>
@@ -154,36 +154,49 @@
 
         <!--    My Contact form -->
 
-        <!--    My Contact form -->
+
+
 
         <!--        Foooter with contacts and copyright info -->
+        <div class="row forms">
+            <div class="large-2 columns">
+
+            </div>
+            <div class="large-8 columns">
+
+
+
+            </div>
+            <div class="large-2 columns">
+
+            </div>
+
+        </div>
+
+
+
         <div class="row footer">
             <div class="large-8 columns">
-                <p> <a href="#" data-reveal-id="exampleModal1"> Contact Me </a></p>
-                <div class="reveal" id="exampleModal1" data-reveal>
-                    <h1>Awesome. I Have It.</h1>
-                    <p class="lead">Your couch. It is mine.</p>
-                    <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
-                    <button class="close-button" data-close aria-label="Close modal" type="button">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
+
+
 
             </div>
 
-
-            <div class="large-4 columns ">
-                <p class="follow">Follow me on:</p>
-                <ul class="nav_social">
-                    <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
-                    <li>
-                        <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
-                        <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
-                </ul>
-            </div>
         </div>
+
+
+        <div class="large-4 columns ">
+            <p class="follow">Follow me on:</p>
+            <ul class="nav_social">
+                <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
+                <li>
+                    <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
+                </li>
+                <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
+                        <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
+            </ul>
+        </div>
+    </div>
     </div>
 
     <script src="js/vendor/jquery.min.js"></script>
