form validation plus methods

--- a/index.html
+++ b/index.html
@@ -160,15 +160,14 @@
         <!--        Foooter with contacts and copyright info -->
         <div class="row forms">
             <div class="large-2 columns">
-
+                <br>
             </div>
             <div class="large-8 columns">
-
+<h4 class="contact-me">Contact Me</h4>
                 <section id="contact">
                     <div class="content">
                         <div id="form">
-                            <form action="" id="contactForm" method="post">
-                                <span>Name</span>
+<form action="" id="contactForm" method="post">                                <span>Name</span>
                                 <input type="text" name="name" class="name" placeholder="Enter your name" tabindex=1 />
                                 <span>Email</span>
                                 <input type="text" name="email" class="email" placeholder="Enter your email" tabindex=2 />
@@ -183,7 +182,7 @@
 
                 </div>
                 <div class="large-2 columns">
-
+                    <br>
                 </div>
 
             </div>
