name changes and formatting in intro page

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
         <div class="row fixed_bg bg_img_1">
             <div class="large-12 columns">
+                <h1 class="content_paper_nme">
+<!--                Ciku <br/> Mwangi.<br> -->
 
-                <div class="overlay">
-                    <h1 class="content_paper_nme">Hi, I'm <br>
-                Ciku Mwangi.<br> <span><hr id= "thread1">
+                <span><hr id= "thread1">
                 A Graphic &amp; Web Designer 		<hr id="thread3" class="right"></span></h1>
-                </div>
+
                 <div class="arrow bounce">
 
                 </div>
@@ -163,16 +163,14 @@
                 <br>
             </div>
             <div class="large-8 columns">
-<h4 class="contact-me">Contact Me</h4>
+                <h4 class="contact-me">Contact Me</h4>
                 <section id="contact">
                     <div class="content">
                         <div id="form">
-<form action="" id="contactForm" method="post">                                <span>Name</span>
+                            <form action="" id="contactForm" method="post"> <span>Name</span>
                                 <input type="text" name="name" class="name" placeholder="Enter your name" tabindex=1 />
                                 <span>Email</span>
-                                <input type="text" name="email" class="email" placeholder="Enter your email" tabindex=2 />
-                                <span id="captcha"></span>
-                                <input type="text" name="captcha" class="captcha" maxlength="4" size="4" placeholder="Enter captcha code" tabindex=3 />
+                                <input type="text" name="email" class="email" placeholder="Enter your email" tabindex=2 /> -->
                                 <span>Message</span>
                                 <textarea class="message" placeholder="Enter your message" tabindex=4></textarea>
                                 <input type="submit" name="submit" value="Send e-mail" class="submit" tabindex=5>
@@ -187,12 +185,8 @@
 
             </div>
 
-
-
             <div class="row footer">
                 <div class="large-8 columns">
-
-
 
                 </div>
 
