fixing the footer

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <form action="" id="contactForm" method="post"> <span>Name</span>
                                 <input type="text" name="name" class="name" placeholder="Enter your name" tabindex=1 />
                                 <span>Email</span>
-                                <input type="text" name="email" class="email" placeholder="Enter your email" tabindex=2 /> -->
+                                <input type="text" name="email" class="email" placeholder="Enter your email" tabindex=2 />
                                 <span>Message</span>
                                 <textarea class="message" placeholder="Enter your message" tabindex=4></textarea>
                                 <input type="submit" name="submit" value="Send e-mail" class="submit" tabindex=5>
@@ -183,34 +183,30 @@
                     <br>
                 </div>
 
-            </div>
 
+            </div>
             <div class="row footer">
                 <div class="large-8 columns">
 
                 </div>
-
-            </div>
-
-
-            <div class="large-4 columns ">
-                <p class="follow">Follow me on:</p>
-                <ul class="nav_social">
-                    <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
-                    <li>
-                        <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
+                <div class="large-4 columns ">
+                    <p class="follow">Follow me on:</p>
+                    <ul class="nav_social">
+                        <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
+                        <li>
+                            <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
                         <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
-                </ul>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
+        <script src="js/vendor/jquery.min.js"></script>
+        <script src="js/vendor/what-input.min.js"></script>
+        <script src="js/foundation.min.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
