fixing the spanned items

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <h1 class="content_paper_nme">
 <!--                Ciku <br/> Mwangi.<br> -->
 
-                <span><hr id= "thread1">
-                A Graphic &amp; Web Designer 		<hr id="thread3" class="right"></span></h1>
+               <hr id= "thread1">
+             <span>   A Graphic &amp; Web Designer 	</span>	<hr id="thread3" class="right"></h1>
 
                 <div class="arrow bounce">
 
@@ -158,7 +158,7 @@
 
 
         <!--        Foooter with contacts and copyright info -->
-        <div class="row forms">
+        <div class="row forms" id="contact">
             <div class="large-2 columns">
                 <br>
             </div>
