--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <body>
     <div class="container">
-        <div class="row navbar " id="top">
-            <div class="large-12 columns">
+        <div class="row " id="top">
+            <div class="large-12 columns ">
+                <!--
                 <div id="header" class="header">
                     <div id="nav">
                         <ul>
@@ -29,6 +30,7 @@
                         </ul>
                     </div>
                 </div>
+-->
             </div>
 
         </div>
