--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/demo.css" />
+
+
 </head>
 
 <body>
@@ -31,6 +35,19 @@
                     </div>
                 </div>
 -->
+                <section class="section section--menu" id="Sebastian">
+
+                    <span class="link-copy"></span>
+                    <nav class="menu menu--sebastian">
+                        <ul class="menu__list">
+                            <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">News</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Support</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                        </ul>
+                    </nav>
+                </section>
             </div>
 
         </div>
@@ -204,7 +221,45 @@
                 </div>
             </div>
         </div>
+        <script src="js/classie.js"></script>
+        <script src="js/clipboard.min.js"></script>
+        <script>
+            (function() {
+                [].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
+                    var menuItems = menu.querySelectorAll('.menu__link'),
+                        setCurrent = function(ev) {
+                            ev.preventDefault();
 
+                            var item = ev.target.parentNode; // li
+
+                            // return if already current
+                            if (classie.has(item, 'menu__item--current')) {
+                                return false;
+                            }
+                            // remove current
+                            classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
+                            // set current
+                            classie.add(item, 'menu__item--current');
+                        };
+
+                    [].slice.call(menuItems).forEach(function(el) {
+                        el.addEventListener('click', setCurrent);
+                    });
+                });
+
+                [].slice.call(document.querySelectorAll('.link-copy')).forEach(function(link) {
+                    link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
+                    new Clipboard(link);
+                    link.addEventListener('click', function() {
+                        classie.add(link, 'link-copy--animate');
+                        setTimeout(function() {
+                            classie.remove(link, 'link-copy--animate');
+                        }, 300);
+                    });
+                });
+            })(window);
+
+        </script>
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/vendor/what-input.min.js"></script>
         <script src="js/foundation.min.js"></script>
