--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
 
 <body>
     <div class="container">
+        <div class=" row navigation-menu">
+
+
+
+
+            <nav class="menu menu--sebastian">
+                <ul class="menu__list">
+                    <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">News</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Support</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                </ul>
+            </nav>
+
+        </div>
         <div class="row " id="top">
             <div class="large-12 columns ">
                 <!--
@@ -35,19 +51,7 @@
                     </div>
                 </div>
 -->
-                <section class="section section--menu" id="Sebastian">
 
-                    <span class="link-copy"></span>
-                    <nav class="menu menu--sebastian">
-                        <ul class="menu__list">
-                            <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">News</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Support</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
-                        </ul>
-                    </nav>
-                </section>
             </div>
 
         </div>
