--- a/index.html
+++ b/index.html
@@ -166,42 +166,39 @@ skillset -->
 
                     <div class=" small-11 small-centered gallery-port">
                         <div class="case-study study1">
-                            <figure>
-                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
-                            </figure>
+
+
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">Developing Hexxis</h2>
-                                <a class="case-study__link" href="#">View Case Study</a>
+                                <h2 class="case-study__title">Sage Website</h2>
+                                <a class="case-study__link" href="#">View Page</a>
                             </div>
                         </div>
 
                         <div class="case-study study2">
-                            <figure>
-                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
-                            </figure>
+
+
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">Developing Hexxis</h2>
-                                <a class="case-study__link" href="#">View Case Study</a>
+                                <h2 class="case-study__title">Queens Hotel</h2>
+                                <a class="case-study__link" href="#">View Page</a>
                             </div>
                         </div>
 
                         <div class="case-study study3">
-                            <figure>
-                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
-                            </figure>
+
+
+                            -->
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">Developing Hexxis</h2>
-                                <a class="case-study__link" href="#">View Case Study</a>
+                                <h2 class="case-study__title">254-Kiddies Couture</h2>
+                                <a class="case-study__link" href="#">View Page</a>
                             </div>
                         </div>
 
                         <div class="case-study study4">
-                            <figure>
-                                <img class="case-study__img" src="http://static.squarespace.com/static/51b79838e4b0b8b55c75cf91/t/51c4b688e4b03003ea9f1a63/1371846281755/Hexxis+Logo+White.png" alt="" />
-                            </figure>
+
+
                             <div class="case-study__overlay">
-                                <h2 class="case-study__title">Developing Hexxis</h2>
-                                <a class="case-study__link" href="#">View Case Study</a>
+                                <h2 class="case-study__title">Burger Dome Cafe</h2>
+                                <a class="case-study__link" href="#">View Page</a>
                             </div>
                         </div>
 
