--- a/index.html
+++ b/index.html
@@ -1,273 +1,103 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" dir="ltr">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beth Personal website</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:700italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/demo.css" />
-
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Website</title>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat|Cardo' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <div class="container">
-        <div class=" row navigation-menu">
-
-
-
-
-            <nav class="menu menu--sebastian">
-                <ul class="menu__list">
-                    <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">News</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Support</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
-                </ul>
-            </nav>
-
-        </div>
-        <div class="row " id="top">
-            <div class="large-12 columns ">
-                <!--
-                <div id="header" class="header">
-                    <div id="nav">
-                        <ul>
-                            <li><a href="#top">Home</a></li>
-                            <li><a href="#sec">About Me </a></li>
-                            <li><a href="#foto">Portfolio</a></li>
-                            <li><a href="#blog">Blog</a></li>
-                            <li><a href="#contact">Contact</a></li>
-
-                        </ul>
-                    </div>
+    <div class="container ">
+        <div class="row one fullwidth">
+            <div class="12-large columns  bg-img">
+                <div class="mouse">
+                    <span></span>
                 </div>
--->
+
+            </div>
+        </div>
+        <!--    This second row covers about me-->
+        <div class="row two fullwidth">
+            <div class="large-4 columns about overlay">
+                <div id="box">
+                    <h1>About<br><span>Me</span></h1></div>
+            </div>
+            <div class="large-8 columns cont">
+
+                <div class="item">
+                    <h3>designer &#43; coder</h3>
+                    <p class="me">A web and graphics developer who is pasionate about making cool, unique and functional websites. I am technicaly proficient and easy to work with. When am not coding, i try out new recipes and and engage in outdoor activities</p>
+                </div>
 
             </div>
 
         </div>
-        <!--The first row contains the header, navigation bar -->
 
-        <div class="row fixed_bg bg_img_1">
+        <!--    Row three content with portfolio work -->
+        <div class="row three">
             <div class="large-12 columns">
-                <h1 class="content_paper_nme">
-<!--                Ciku <br/> Mwangi.<br> -->
 
-               <hr id= "thread1">
-             <span>   A Graphic &amp; Web Designer 	</span>	<hr id="thread3" class="right"></h1>
-
-                <div class="arrow bounce">
-
-                </div>
 
             </div>
         </div>
+    </div>
+    <script src="js/classie.js"></script>
+    <script src="js/clipboard.min.js"></script>
 
-        <!--End Header-->
-        <!--
+    <script>
+        (function () {
+			[].slice.call(document.querySelectorAll('.menu')).forEach(function (menu) {
+                var menuItems = menu.querySelectorAll('.menu__link')
+                    , setCurrent = function (ev) {
+                        ev.preventDefault();
+
+                        var item = ev.target.parentNode; // li
+
+                        // return if already current
+                        if (classie.has(item, 'menu__item--current')) {
+                            return false;
+                        }
+                        // remove current
+                        classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
+                        // set current
+                        classie.add(item, 'menu__item--current');
+                    };
+
+				[].slice.call(menuItems).forEach(function (el) {
+                    el.addEventListener('click', setCurrent);
+                });
+            });
+
+			[].slice.call(document.querySelectorAll('.link-copy')).forEach(function (link) {
+                link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
+                new Clipboard(link);
+                link.addEventListener('click', function () {
+                    classie.add(link, 'link-copy--animate');
+                    setTimeout(function () {
+                        classie.remove(link, 'link-copy--animate');
+                    }, 300);
+                });
+            });
+        })(window);
+    </script>
+    <!--
+      <script>//$(document).foundation()
+
+
+
+
+</script>
 -->
-
-        <!--The second row -->
-        <div class="row scroll-bg second" id="sec">
-            <div class="large-12 columns ">
-                <div class="circle"></div>
-                <h4 class="col about">About Me</h4>
-                <p class="col text"> I am a software developer who is passionate
-                    <br> about coding and creating new stuff that relate to technology.
-                    <br> I hold a Bachelors Degree in
-                    <br>Mathematics and Computer Science </p>
-
-            </div>
-        </div>
-
-
-
-
-
-        <!--          End of  row 2 first column with profile picture-->
-
-
-        <div class="row scroll-bg fixed_bg  bg_img_2" id="skil">
-            <div class="row skills">
-
-                <h4 class="about"> Skills</h4>
-
-            </div>
-            <div class="row skills">
-                <div class="large-3 columns skillsetter">
-                    <h3>Html5</h3>
-                    <img class="iconic" src="img/1460676594_badge-html-5.svg" alt="" />
-
-
-                </div>
-                <div class="large-3 columns skillsetter">
-                    <h3>Css3</h3>
-                    <img class="iconic" src="img/1460676625_badge-css-3.svg" alt="" />
-
-
-                </div>
-                <div class="large-3 columns skillsetter">
-                    <h3>Javascript</h3>
-                    <img class="iconic" src="img/1460676536_node_js.svg" alt="" />
-
-
-                </div>
-                <div class="large-3 columns skillsetter">
-                    <h3>Photoshop</h3>
-                    <img class="iconic" src="img/Adobe%20Photoshop-48.png" alt="" />
-
-                </div>
-            </div>
-
-        </div>
-
-
-        <!--row three-->
-
-        <div class="row scroll-bg fixed_bg effect-port" id="foto">
-            <div class="row skills">
-
-                <h4 class="about">Portfolio</h4>
-
-            </div>
-
-
-            <div class="row small-up-1 medium-up-2 large-up-4 scroll-bg fixed_bg">
-                <div class="column">
-                    <img src="img/game%20of%20thrones.png" class="thumbnail" alt="">
-
-                </div>
-                <div class="column">
-                    <img src="img/quora%20.png" class="thumbnail" alt="">
-                </div>
-                <div class="column">
-                    <img src="img/queens.png" class="thumbnail" alt="">
-                </div>
-                <div class="column">
-                    <img src="img/FrontEndWebpng" class="thumbnail" alt="">
-                </div>
-            </div>
-        </div>
-
-        <!--row three-->
-
-        <div class="row four  scroll-bg fixed_bg bg_img_2 ">
-            <div class="large-12 columns">
-                <div class="border2">
-                    <h2 class="blogger">Blog</h2>
-                    <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
-                    <p class="blog cont"> This post covers the step by step process of creating a drop down navigation bar.
-                        <br> So, one of my major hacks was to create a drop down menu so that i could use it in my one page Game of Thrones cover. In this tutorial, i will explain how i created the navigation using HTML CCS. </p>
-                    <button class="alert hollow button" href="#">Read More</button>
-                </div>
-            </div>
-
-        </div>
-
-        <!--        row five contents-->
-
-        <!--    My Contact form -->
-
-
-
-
-        <!--        Foooter with contacts and copyright info -->
-        <div class="row forms" id="contact">
-            <div class="large-2 columns">
-                <br>
-            </div>
-            <div class="large-8 columns">
-                <h4 class="contact-me">Contact Me</h4>
-                <section id="contact">
-                    <div class="content">
-                        <div id="form">
-                            <form action="" id="contactForm" method="post"> <span>Name</span>
-                                <input type="text" name="name" class="name" placeholder="Enter your name" tabindex=1 />
-                                <span>Email</span>
-                                <input type="text" name="email" class="email" placeholder="Enter your email" tabindex=2 />
-                                <span>Message</span>
-                                <textarea class="message" placeholder="Enter your message" tabindex=4></textarea>
-                                <input type="submit" name="submit" value="Send e-mail" class="submit" tabindex=5>
-                            </form>
-                        </div>
-                </section>
-
-                </div>
-                <div class="large-2 columns">
-                    <br>
-                </div>
-
-
-            </div>
-            <div class="row footer">
-                <div class="large-8 columns">
-
-                </div>
-                <div class="large-4 columns ">
-                    <p class="follow">Follow me on:</p>
-                    <ul class="nav_social">
-                        <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
-                        <li>
-                            <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
-                        <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <script src="js/classie.js"></script>
-        <script src="js/clipboard.min.js"></script>
-        <script>
-            (function() {
-                [].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
-                    var menuItems = menu.querySelectorAll('.menu__link'),
-                        setCurrent = function(ev) {
-                            ev.preventDefault();
-
-                            var item = ev.target.parentNode; // li
-
-                            // return if already current
-                            if (classie.has(item, 'menu__item--current')) {
-                                return false;
-                            }
-                            // remove current
-                            classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
-                            // set current
-                            classie.add(item, 'menu__item--current');
-                        };
-
-                    [].slice.call(menuItems).forEach(function(el) {
-                        el.addEventListener('click', setCurrent);
-                    });
-                });
-
-                [].slice.call(document.querySelectorAll('.link-copy')).forEach(function(link) {
-                    link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
-                    new Clipboard(link);
-                    link.addEventListener('click', function() {
-                        classie.add(link, 'link-copy--animate');
-                        setTimeout(function() {
-                            classie.remove(link, 'link-copy--animate');
-                        }, 300);
-                    });
-                });
-            })(window);
-
-        </script>
-        <script src="js/vendor/jquery.min.js"></script>
-        <script src="js/vendor/what-input.min.js"></script>
-        <script src="js/foundation.min.js"></script>
-        <script src="js/app.js"></script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
