navigation bar added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
     <div class="container ">
         <div class="row one fullwidth">
             <div class="12-large columns  bg-img">
+                <div class="row fullwidth">
+                    <div class="12-large columns nav ">
+                        <ul>
+                            <li class="name   li-no-hover"> BM </li>
+                            <li class="home">Home</li>
+                            <li>About</li>
+                            <li>
+                                Portfolio
+                            </li>
+                            <li>Blog</li>
+                            <li >
+                                
+                                Contact</li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="mouse">
                     <span></span>
                 </div>
@@ -31,7 +47,8 @@
             <div class="large-8 columns cont">
 
                 <div class="item">
-                    <h3>designer &#43; coder</h3>
+                    <h3>designer 
+                         and coder</h3>
                     <p class="me">A web and graphics developer who is pasionate about making cool, unique and functional websites. I am technicaly proficient and easy to work with. When am not coding, i try out new recipes and and engage in outdoor activities</p>
                 </div>
 
